cluster/apps/monitoring/prometheus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  selector:
    app: prometheus
  ports:
    - name: prometheus
      port: 9090
